<resources>
    <!-- general -->
    <string name="app_name">Bills Tracker</string>
    <string name="appAuthor">Ondřej Pittl</string>
    <string name="appAuthorLink"><a href="http://www.ondrejpittl.cz" style='text-decoration:none' >ondrejpittl.cz</a></string>
    <string name="arrow_left">&#9664;</string>
    <string name="arrow_right">&#9654;</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!-- temp -->
    <string name="action_settings">Settings</string>


    <!-- Welcome activity -->
    <!-- Welcome screen -->
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="loginHello">Hello!</string>
    <string name="loginFirstTime">First time here right?</string>
    <string name="loginTellMe">Tell me about this app.</string>
    <string name="loginContinue">– continue –</string>
    <string name="resetPasswd">Reset password.</string>
    <string name="secretHint">secret password</string>
    <string name="secretHeading">Secret password.</string>
    <string name="secretDescription">Please, enter a secret password you may need to reset PIN if you lose it.</string>


    <!-- Login Screen -->
    <!-- Register -->
    <string name="loginSettingUp">Setting up...</string>
    <!--<string name="loginSettingUp">Just one step...</string>-->
    <string name="loginLetsStart">Let\'s start setting your PIN.</string>
    <string name="loginLogin">– set PIN code –</string>

    <!-- Login -->
    <!-- after setting up -->
    <string name="loginExcellent">Excellent!</string>
    <string name="loginShopping">Log in and go ahead shopping! :)</string>

    <!-- other times -->
    <string name="loginWelcomeBack">Welcome back!</string>
    <string name="loginOtherTime">Some expenses? Again?</string>

    <string name="loginEnter">– enter –</string>
    <string name="loginOK">Successfully logged in.</string>
    <string name="loginERR">Sorry! Try again.</string>


    <!-- About activity -->
    <string name="title_activity_about">AboutActivity</string>
    <string name="headingAboutApp">About BillsTracker</string>
    <string name="desc1">BillsTracker is an app monitoring your payments making you well informed about your expenses in the way of a global point of view. Collected data are being classified and sorted shown in the first part of this app. In the second one records are being summarized and represented with charts inspecting them with their dependencies.</string>
    <string name="desc2">This app was designed with emphasis on a simple user-interface providing as easy usage as possible. Keeping records means a duty coming with a laziness of observing this principle. This app should lend you a helping hand with it through a simple UI and easy usage that are its main priorities besides clean design.</string>
    <string name="descAuthor">BillsTracker was created by Ondřej Pittl, an IT student of the Faculty of Applied Science of University of West Bohemia based in Prague, in the Czech Republic.</string>


    <!-- Home activity -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_priceHint">amount</string>
    <string name="home_noteHint">( note )</string>
    <string name="home_btn_ok_insert_label">Insert</string>
    <string name="home_btn_ok_update_label">Update</string>
    <string name="home_btn_cancel_clear_label">Clear</string>
    <string name="home_btn_cancel_label">Cancel</string>
    <string name="home_month_mock">March</string>
    <string name="home_stats_day_label">today:</string>
    <string name="home_stats_d_label">T:</string>
    <string name="home_stats_week_label">week:</string>
    <string name="home_stats_w_label">W:</string>
    <string name="home_stats_month_label">month:</string>
    <string name="home_stats_m_label">M:</string>
    <string name="recordDeleteLabel">delete</string>
    <string name="price_mock">0</string>


    <!-- controls -->
    <string name="btn_dateTxt">today</string>
    <string name="title_activity_statistics">StatisticsActivity</string>


    <!-- tutorial -->
    <string name="tutorialPaymentsListedBelow">All your payments will be listed below.</string>
    <string name="tutorialSettings">Settings.</string>
    <string name="tutorialStats">Statistics.</string>
    <string name="tutorialControls">Inserting new payment or editing the old one is possible at this control panel.</string>
    <string name="tutorialUsefulStats">Here are some statistics you may find useful.</string>
    <string name="tutorialPaymentEdit">...or edit payment swiping right. &#9654;</string>
    <string name="tutorialPaymentDelete">&#9664; You can remove payment swiping left...</string>


    <!-- Statistics activity-->
    <string name="statisticsHeading">Statistics summary</string>
    <string name="statisticsMonthHeading">Month statistics</string>
    <string name="statisticsYearHeading">Year statistics</string>
    <string name="statisticsNoData">No statistics data.</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settingsHeading">Settings</string>
    <string name="settingsDisplay">Display</string>
    <string name="settingsBehaviour">Behaviour</string>
    <string name="settingsData">Data</string>
    <string name="settingsCategories">Categories</string>
    <string name="settingsStores">Stores</string>
    <string name="settingsNewCategory">new category</string>
    <string name="settingsNewStore">new store</string>
    <string name="settingsPasswordReq">Require password</string>
    <string name="settingsAutocollapse">Display payment notes</string>
    <string name="settingsAnimations">Allow payment animations</string>
    <string name="settingsIcons">Allow payment icons</string>
    <string name="settingsDefaults">Defaults</string>
    <string name="settingsDefCurrency">Currency</string>
    <string name="settingsDefCategory">Category</string>
    <string name="settingsDesign">Design</string>
    <string name="settingsTheme">Theme</string>
    <string name="settingsDefStore">Store</string>
    <string name="settingsRestore">Restore defaults.</string>
    <string name="settingsTutorial">Replay tutorial  &#9654;</string>
    <string name="settingsAboutApp">About app  &#9654;</string>
    <string name="settingsErase">Erase all records.</string>



    <string name="statsMonthHeading1">Day by day</string>
    <string name="statsMonthHeading3">The most expensive day.</string>
    <string name="statsMonthHeading4">Do you know what do you pay for?</string>

    <string name="statsMonthDesc1">Every single day you\'ve spent some money is displayed below.</string>
    <string name="statsMonthDesc2">Here you go – this is how you\'ve gone crazy you shopaholic!</string>
    <string name="statsMonthDesc3">And what day of a week is the most difficult day for the wallet of yours?</string>
    <string name="statsMonthDesc4">Where is your money going?</string>

    <string name="statsYearHeading1">Month by month</string>
    <string name="statsYearHeading3">The most expensive day.</string>
    <string name="statsYearHeading4">Do you know what do you pay for?</string>

    <string name="statsYearDesc1">Some months are really expensive, aren\'t they?</string>
    <string name="statsYearDesc2">Well, let\'s see how have you been going.</string>
    <string name="statsYearDesc3">And what day of a week is the most difficult day for the wallet of yours?</string>
    <string name="statsYearDesc4">Where is your money going?</string>



    <string-array name="backgrounds">
        <item>Greenhouse</item>
        <item>Blueberry cream</item>
        <item>Atlantis</item>
        <item>Mystic sand</item>
        <item>Wild rose</item>
    </string-array>


</resources>
