<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.ondrejpittl.semestralka.AboutActivity"
    tools:showIn="@layout/activity_about">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgViewBG"
        android:layout_gravity="center"
        android:cropToPadding="false"
        android:scaleType = "centerCrop"
        android:src="@drawable/bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="100dp"
            android:paddingTop="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headingAboutApp"
                android:textSize="30sp"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appAuthor"
                    android:textSize="17sp"
                    android:id="@+id/tvAuthor"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appAuthorLink"
                    android:textSize="17sp"
                    android:textColor="@color/appTextGold"
                    android:id="@+id/tvLink"
                    android:textColorLink="@color/appTextGold"
                    android:layout_marginLeft="5dp"
                    android:linksClickable="true"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc1"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="40dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc2"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="25dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/descAuthor"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="25dp"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>



</FrameLayout>







